--- a/app/mvc/sidebar/sidebar.css
+++ b/app/mvc/sidebar/sidebar.css
@@ -3,7 +3,7 @@
 	position: fixed;
 	right: 0px;
 	width: 0px;
-	bottom: 42px;
+	bottom: 0px;
 	top: 0px;
 	background-color: rgb(217, 127, 127);
 	border-left:rgb(240, 186, 186);
@@ -12,7 +12,8 @@
 
 .sidebar .title {
 	width:100%;
-	height: 42px;
+	height: 44px;
+	background-color: rgb(201, 105, 105);
 }
 
 .sidebar .sidebar-list {
@@ -23,11 +24,24 @@
 	overflow-y: scroll;
 }
 
+.sidebar .sidebar-item {
+	background-color: rgb(201, 105, 105);
+	cursor: pointer;
+	padding: 14px;
+	 width: 14px;
+}
+
+.sidebar .sidebar-item:hover {
+	background-color: rgb(193, 84, 84);
+	color: lightgrey;
+}
+
 .sidebar .close {
+	padding-right: 16px;
 	position: absolute;
 	right: 0px;
-	margin-right: 4px;
-	cursor: pointer;
+	margin-right: 6px;
+	cursor: pointer
 }
 
 .sidebar .close:hover {
@@ -55,5 +69,5 @@
 
 .sidebar-list::-webkit-scrollbar-thumb
 {
-	background-color: #000000;
+	background-color: rgb(217, 145, 145);
 }
