--- a/app/mvc/node/node.css
+++ b/app/mvc/node/node.css
@@ -1,5 +1,5 @@
 .node {
-	fill: white;
+	fill: transparent;
 }
 
 .node.red {
@@ -21,7 +21,7 @@
 	fill: yellow;
 }
 .node.white {
-	fill: white;
+	fill: transparent;
 }
 
 .node foreignObject {
