--- a/app/mvc/node/node.css
+++ b/app/mvc/node/node.css
@@ -1,5 +1,5 @@
 .node {
-	fill: transparent;
+	fill: white;
 }
 
 .node.red {
@@ -20,10 +20,12 @@
 .node.yellow {
 	fill: yellow;
 }
-.node.white {
+.node.transparent {
 	fill: transparent;
 }
-
+.node.white {
+	fill: white;
+}
 .node foreignObject {
 	position: relative;
 }
